--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -12,11 +12,12 @@ input{
     border: 1px solid #e9e9e9;
     outline: none;
     font-size: 24px;
+    padding-left: 30px;
 }
 
 button{
     position: absolute;
-    right: 0;
+    right: -25px;
     top: 7px;
     border: none;
     height: 50px;
@@ -30,15 +31,3 @@ button{
     background-color: #DB7600;
 }
 
-::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-    padding-left: 30px;
-  }
-  ::-moz-placeholder { /* Firefox 19+ */
-    padding-left: 30px;
-  }
-  :-ms-input-placeholder { /* IE 10+ */
-    padding-left: 30px;
-  }
-  :-moz-placeholder { /* Firefox 18- */
-    padding-left: 30px;
-  }
